--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.9.2"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^13.0.0",
     "html-webpack-plugin": "^5.6.3",
     "webpack": "^5.101.0",
     "webpack-cli": "^6.0.1",
